# htpc

./: .gitignore  CMakeLists.txt  README.md  build-wasm
src/: image.cpp  image.hpp  log.cpp  log.hpp  main.cpp  math.hpp  ui.cpp  ui.hpp
src/core/: fs.cpp  fs.hpp  log.hpp  math.hpp  maybe.hpp  unit.cpp  unit.hpp
src/embed/: NotoSansMedium.hpp
src/encoding/: base64.cpp  base64.hpp  json.cpp  json.hpp  json_cpp.hpp  url.cpp  url.hpp
src/http/: http.cpp  http.hpp
src/net/: tcp_socket.cpp  tcp_socket.hpp
src/spotify/: api.cpp  api.hpp  auth.cpp  auth.hpp  data.hpp  spotify.cpp  spotify.hpp
src/steam/: steam.cpp  steam.hpp  vdf.cpp  vdf.hpp
src/steam/tests/: vdf.cpp
src/ui/: list.cpp  list.hpp  ui.cpp  ui.hpp  widget.hpp
src/views/: spotify_view.cpp  spotify_view.hpp
tests/: base64.cpp  json.cpp  unit.cpp
tests/steam/: vdf.cpp
tools/: build-resources  build-wasm
www/: index.html
